Microdata: item with itemprop attribute should not include the item itself in the HTMLPropertiesCollection. https://bugs.webkit.org/show_bug.cgi?id=93717

Reviewed by Ryosuke Niwa.

Source/WebCore:

Tests: fast/dom/MicroData/item-with-itemprop-attr.html
       fast/dom/MicroData/item-with-itemref-pointing-to-itself.html

* dom/PropertyNodeList.cpp:
(WebCore::PropertyNodeList::nodeMatches): Do not process the testElement if it is the owner node.
* html/HTMLPropertiesCollection.cpp:
(WebCore::nextNodeWithProperty): Traverse the next node only if previous node is microdata item
i.e, ownerNode or previous element does not have itemscope attribute specified.
(WebCore::HTMLPropertiesCollection::virtualItemAfter): Try to find the next property if current
is ownerNode.

LayoutTests:

Added test to ensure that item with itemprop attribute should not include
itself in its HTMLPropetiesCollection.

* fast/dom/MicroData/item-with-itemprop-attr-expected.txt: Added.
* fast/dom/MicroData/item-with-itemprop-attr.html: Added.
* fast/dom/MicroData/item-with-itemref-pointing-to-itself-expected.txt: Added.
* fast/dom/MicroData/item-with-itemref-pointing-to-itself.html: Added.


Canonical link: https://commits.webkit.org/111626@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125348 268f45cc-cd09-0410-ab3c-d52691b4dbfc